# hope_shop

./: .env.sample  .gitignore  README.md  groups.json  pyproject.toml
config/: settings.py  urls.py
product_blog/: admin.py  apps.py  models.py  urls.py  views.py
product_blog/migrations/: 0001_initial.py  0002_rename_is_active_blog_is_published.py  0003_alter_blog_options.py
product_blog/templates/product_blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
product_catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
product_catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_options.py  0004_alter_product_created_at_alter_product_updated_at.py  0005_productcharacteristics.py  0006_delete_productcharacteristics.py  0007_product_standard.py  0008_alter_product_standard.py  0009_remove_product_standard.py  0010_remove_product_is_active_version.py  0011_version_unique_versions.py  0012_remove_version_unique_versions_and_more.py  0013_product_owner.py  0014_product_is_active.py  0015_alter_product_options_and_more.py  0016_alter_product_options.py
product_catalog/templates/product_catalog/: base.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  (+1 more)
product_catalog/templatetags/: custom_tag.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_password.py  0003_user_country_alter_user_password.py  0004_user_token.py  0005_alter_user_options.py
(+7 files in other folders)
