[tool.poetry]
name = "homework-21-1"
version = "0.1.0"
description = ""
authors = ["Pinchuk Sergey <Pinboyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"
pytils = "^0.4.1"
django = "4.2"
ipython = "^8.27.0"
redis = "^5.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
